securitygroups.tf
# SG to allow SSH 
resource "aws_security_group" "SSH-SG" {
    name = "AllowSSH"
    description = "To allow SSH port"
       
    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = [ "0.0.0.0/0" ]
    }

    egress  {
      from_port = 0
      to_port = 0
      protocol = "-1"
      cidr_blocks = [ "0.0.0.0/0" ]

  }
}

#SG to allow HTTP
resource "aws_security_group" "HTTP-SG" {

    name = "AllowHTTP"

    description = "to allow http"

    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = [ "0.0.0.0/0" ]
    }

    egress  {
      from_port = 0
      to_port = 0
      protocol = "-1"
      cidr_blocks = [ "0.0.0.0/0" ]

  }
}
